--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -176,6 +176,9 @@ abstract_length = 135
 #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
 plugins_js  = []
 
+# Use custom icons
+plugins_css = ["custom"]
+
 # Avatars.
 # An avatar is an image that appears next to a user's name.
 # An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
